Enable Inner Grid - Image List - Minor style update - Headline

--- a/eaton.frontend/src/components/ttil-list/css/views/_view-image-only.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-image-only.scss
@@ -23,6 +23,7 @@
   &__image-headline {
     margin-top: ($spacing__sm);
     color: $color__primary-blue;
+    font-weight: bold;
   }
 
   //-----------------------------
