--- a/eaton.frontend/src/components/header/css/_header-interactions.scss
+++ b/eaton.frontend/src/components/header/css/_header-interactions.scss
@@ -97,8 +97,16 @@
   }
 
   .drawer-open {
-    max-height: 2000;
-    visibility: visible;
+    .full-page-drawer {
+      visibility: visible;
+      max-height: 2000px;
+    }
+  }
+
+  .drawer-is-animating {
+    .full-page-drawer {
+      transition: max-height 0.7s ease-in-out, visibility 0.3s ease-in-out;
+    }
   }
 }
 
