--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -75,7 +75,8 @@
   .search-open .header-primary-nav__open-search .icon-close { display: block; top: -3px; font-size: 18px; } }
 
 @media screen and (min-width: 992px) { .level-2-open .mega-menu { visibility: visible; opacity: 1; }
-  .drawer-open { max-height: 2000; visibility: visible; } }
+  .drawer-open .full-page-drawer { visibility: visible; max-height: 2000px; }
+  .drawer-is-animating .full-page-drawer { -webkit-transition: max-height 0.7s ease-in-out, visibility 0.3s ease-in-out; transition: max-height 0.7s ease-in-out, visibility 0.3s ease-in-out; } }
 
 .aem-AuthorLayer-Edit .mega-menu, .aem-AuthorLayer-Edit .header-search, .cq-wcm-edit .mega-menu, .cq-wcm-edit .header-search { position: relative !important; visibility: visible !important; opacity: 1 !important; z-index: 99999 !important; }
 
