Cleanup - Header Styles - Move AEM authoring styles out of interactions.

--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -11,6 +11,7 @@
 @import "header-primary-nav";
 @import "header-search";
 @import "header-interactions";
+@import "header-aem-authoring";
 
 // Base Styles
 .eaton-header {
