--- a/eaton.frontend/src/components/header/css/_header-interactions.scss
+++ b/eaton.frontend/src/components/header/css/_header-interactions.scss
@@ -2,6 +2,7 @@
 // Handles Header Behaviors & Interactions
 // Visual state when the nav is open (desktop/mobile)
 // Visual state when the search is open (default)
+// Visual state when the drawer is open (default)
 //------------------------------------------
 
 //-----------------------------------
@@ -84,7 +85,6 @@
   }
 }
 
-
 //-----------------------------------
 // Desktop Breakpoint
 //-----------------------------------
@@ -107,32 +107,5 @@
     .full-page-drawer {
       transition: max-height 0.7s ease-in-out, visibility 0.3s ease-in-out;
     }
-  }
-}
-
-//-----------------------------------
-// AEM Author Mode Styles
-//-----------------------------------
-
-// stylelint-disable selector-class-pattern
-.aem-AuthorLayer-Edit,
-.cq-wcm-edit {
-
-  // stylelint-disable declaration-no-important
-  .mega-menu,
-  .header-search {
-    position: relative !important;
-    visibility: visible !important;
-    opacity: 1 !important;
-    z-index: 99999 !important;
-
-    &__content {
-      display: block !important;
-    }
-  }
-
-  .header-search {
-    transform: translateY(0) !important;
-    transition: none !important;
   }
 }
