--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -78,9 +78,9 @@
   .drawer-open .full-page-drawer { visibility: visible; max-height: 2000px; }
   .drawer-is-animating .full-page-drawer { -webkit-transition: max-height 0.7s ease-in-out, visibility 0.3s ease-in-out; transition: max-height 0.7s ease-in-out, visibility 0.3s ease-in-out; } }
 
-.aem-AuthorLayer-Edit .mega-menu, .aem-AuthorLayer-Edit .header-search, .cq-wcm-edit .mega-menu, .cq-wcm-edit .header-search { position: relative !important; visibility: visible !important; opacity: 1 !important; z-index: 99999 !important; }
+.aem-AuthorLayer-Edit .full-page-drawer, .aem-AuthorLayer-Edit .mega-menu, .aem-AuthorLayer-Edit .header-search, .cq-wcm-edit .full-page-drawer, .cq-wcm-edit .mega-menu, .cq-wcm-edit .header-search { position: relative !important; visibility: visible !important; opacity: 1 !important; z-index: 99999 !important; }
 
-.aem-AuthorLayer-Edit .mega-menu__content, .aem-AuthorLayer-Edit .header-search__content, .cq-wcm-edit .mega-menu__content, .cq-wcm-edit .header-search__content { display: block !important; }
+.aem-AuthorLayer-Edit .full-page-drawer__content, .aem-AuthorLayer-Edit .mega-menu__content, .aem-AuthorLayer-Edit .header-search__content, .cq-wcm-edit .full-page-drawer__content, .cq-wcm-edit .mega-menu__content, .cq-wcm-edit .header-search__content { display: block !important; }
 
 .aem-AuthorLayer-Edit .header-search, .cq-wcm-edit .header-search { -webkit-transform: translateY(0) !important; transform: translateY(0) !important; -webkit-transition: none !important; transition: none !important; }
 
