--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
@@ -4,14 +4,15 @@
     <div class="container">
         <div class="row">
             <h2 class="col-sm-12 country-selector__header">${data.header}</h2>
+
             <div data-sly-list="${data.regionList}" class="col-sm-12 panel-group country-selector__list" role="tablist" aria-multiselectable="true">
                 <div class="panel country-selector__item">
-                    <div class="panel-heading country-selector__item-header" role="tab" id="${item.regionId}">
-                        <a href="#collapse-${itemList.index}"
+                    <div class="panel-heading country-selector__item-header" role="tab" id="accordion-${item.regionId}">
+                        <a href="#accordion-collapse-${itemList.index}"
                         class="country-selector__item-link u-absolute-fill"
                         role="button"
                         aria-expanded="false"
-                        aria-controls="collapse-${itemList.index}"
+                        aria-controls="accordion-collapse-${itemList.index}"
                         data-toggle="collapse"
                         data-parent="country-selector__item">
                             <span class="sr-only">Select your location</span>
@@ -22,7 +23,7 @@
                         </i>
                     </div>
 
-                    <div id="collapse-${itemList.index}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="${item.regionId}">
+                    <div id="accordion-collapse-${itemList.index}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="accordion-${item.regionId}">
                         <div class="country-selector__item-body">
                             <ul data-sly-list.country="${item.countryList}" class="country-selector__item-list">
                                 <li class="col-xs-12 col-md-3 country-selector__item-country">
