--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/tabbed-menu-list/css/tabbed-menu-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/tabbed-menu-list/css/tabbed-menu-list.css
@@ -14,7 +14,7 @@
 
 .eaton-tabbed-menu-list__item > a { color: #333F48; }
 
-.eaton-tabbed-menu-list__item > a span { color: #005EB8; font-size: 20px; }
+.eaton-tabbed-menu-list__item > a span { color: #005EB8; font-size: 2.0rem; }
 
 .eaton-tabbed-menu-list__item > a.collapsed { color: #005EB8; }
 
