--- a/eaton.frontend/src/components/tabbed-menu-list/css/tabbed-menu-list.scss
+++ b/eaton.frontend/src/components/tabbed-menu-list/css/tabbed-menu-list.scss
@@ -52,7 +52,7 @@
 
       span {
         color: $color__primary-blue;
-        font-size: 20px;
+        font-size: 2.0rem;
       }
 
       &.collapsed {
