--- a/eaton.frontend/src/components/ttil-list/css/views/_view-category-hero.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-category-hero.scss
@@ -1,26 +1,32 @@
 .eaton-ttil-list-category-hero {
-  font-family: $font-family__primary;
+  //font-family: $//font-family__primary;
   overflow: hidden;
 }
 
 .category-hero {
   &__header-image {
-    width: 100%;
-    height: auto;
+    img {
+      width: 100%;
+      height: auto;
+    }
+
   }
 
   &__header-content {
     position: absolute;
-    top: 25%;
+    top: 50%;
+    transform: translateY(-50%);
     color: $color__white;
-    width: 100%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
   }
 
   &__header-cta {
     border: 0;
-    font-size: 1.2em;
+    //font-size: 1.2em;
     color: $color__white;
-    font-family: $font-family__secondary;
+    //font-family: $//font-family__secondary;
   }
 
   &-eye-brown {
@@ -31,21 +37,20 @@
     a:visited,
     a:focus {
       color: $color__white;
-      text-decoration: none;
+      text-decoration: underline;
     }
   }
 
   &-body-copy {
     color: $color__white;
-    font-size: 1.2em;
-    margin-top: 30px;
-    font-family: $font-family__secondary;
+    //font-size: 1.2em;
+    margin-top: 20px;
+    //font-family: $//font-family__secondary;
   }
 
-  &__header-title h2 {
-    font-size: 3.5em;
-    margin-top: 30px;
-    margin-bottom: 30px;
+  &__header-title {
+    //font-size: 3.5em;
+    margin: 20px 0;
   }
 
   &-bottomline {
@@ -58,23 +63,23 @@
 @media only screen and (max-width: 480px) {
   .category-hero {
     &__header-image {
-      height: 430px;
+      // height: 430px;
     }
 
     &__header-content {
-      top: 15%;
+      // top: 15%;
     }
 
     &__header-title h2 {
-      font-size: 2em;
+      //font-size: 2em;
     }
 
     &-body-copy {
-      font-size: 1em;
+      //font-size: 1em;
     }
 
     &__header-cta {
-      font-size: 1em;
+      //font-size: 1em;
     }
   }
 }
@@ -82,23 +87,23 @@
 @media only screen and (min-width: 481px) and (max-width: 991px) {
   .category-hero {
     &__header-image {
-      height: 430px;
+      // height: 430px;
     }
 
     &__header-content {
-      top: 15%;
+      // top: 15%;
     }
 
     &__header-title h2 {
-      font-size: 2.5em;
+      //font-size: 2.5em;
     }
 
     &-body-copy {
-      font-size: 1.5em;
+      //font-size: 1.5em;
     }
 
     &__header-cta {
-      font-size: 1.5em;
+      //font-size: 1.5em;
     }
   }
 }
@@ -106,7 +111,11 @@
 @media only screen and (min-width: 991px) {
   .category-hero {
     &__header-image {
-      min-height: 385px;
+      // min-height: 385px;
+    }
+
+    &__header-title {
+      margin: 30px 0;
     }
   }
 }
