--- a/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
@@ -26,7 +26,7 @@
   &__quote {
     padding-bottom: $spacing__md / 2;
     font-size: 2.3rem;
-    line-height: 38px;
+    line-height: 3.8rem;
     font-style: italic;
   }
 
@@ -79,7 +79,7 @@
 
     &__quote {
       font-size: 3.0rem;
-      line-height: 48px;
+      line-height: 4.8rem;
       padding-bottom: $spacing__md;
     }
 
