[Eaton-30] Country Selector Drawer: Manage Authoring styles of drawer + Cleanup JS

--- a/eaton.frontend/src/components/header/css/_header-aem-authoring.scss
+++ b/eaton.frontend/src/components/header/css/_header-aem-authoring.scss
@@ -14,11 +14,15 @@
     position: relative !important;
     visibility: visible !important;
     opacity: 1 !important;
-    z-index: 99999 !important;
+    z-index: 999 !important;
 
     &__content {
       display: block !important;
     }
+  }
+
+  .full-page-drawer {
+    max-height: 1000px !important;
   }
 
   .header-search {
