--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -12,7 +12,7 @@
 
 .carousel-component__arrow { display: none; }
 
-.carousel-component__arrow .icon { font-size: 37px; }
+.carousel-component__arrow .icon { font-size: 6.0rem; }
 
 .carousel-component__dots:only-child { display: none; }
 
