--- a/eaton.frontend/src/components/ttil/css/views/_view-l2-hero.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-l2-hero.scss
@@ -12,6 +12,11 @@
     color: $color__white;
   }
 
+  &__text {
+    font-size: 2.0rem;
+    line-height: 3.2rem;
+  }
+
   @include media-desktop-and-up {
     height: 450px;
   }
