--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
@@ -1,38 +1,38 @@
 <!--/* Country Selector: Accordion */-->
 <sly data-sly-use.data="${'../data/view-data.js' @testdata=properties.testdata}">
-  <div class="country-selector--accordion">
+  <div class="country-selector-accordion">
     <div class="container">
         <div class="row">
-            <h2 class="col-sm-12 country-selector__header">${data.header}</h2>
+            <h2 class="col-sm-12 country-selector-accordion__header">${data.header}</h2>
 
-            <div data-sly-list="${data.regionList}" class="col-sm-12 panel-group country-selector__list" role="tablist" aria-multiselectable="true">
-                <div class="panel country-selector__item">
-                    <div class="panel-heading country-selector__item-header" role="tab" id="accordion-${item.regionId}">
+            <div data-sly-list="${data.regionList}" class="col-sm-12 panel-group country-selector-accordion__list" role="tablist" aria-multiselectable="true">
+                <div class="panel country-selector-accordion__item">
+                    <div class="panel-heading country-selector-accordion__item-header" role="tab" id="accordion-${item.regionId}">
                         <a href="#accordion-collapse-${itemList.index}"
-                        class="country-selector__item-link u-absolute-fill"
+                        class="country-selector-accordion__item-link u-absolute-fill"
                         role="button"
                         aria-expanded="false"
                         aria-controls="accordion-collapse-${itemList.index}"
                         data-toggle="collapse"
-                        data-parent="country-selector__item">
+                        data-parent="country-selector-accordion__item">
                             <span class="sr-only">Select your location</span>
                         </a>
-                        <h3 class="country-selector__item-title b-heading-h3">${item.regionName}</h3>
-                        <i class="country-selector__item-icon icon" aria-hidden="true">
+                        <h3 class="country-selector-accordion__item-title b-heading-h3">${item.regionName}</h3>
+                        <i class="country-selector-accordion__item-icon icon" aria-hidden="true">
                           <span class="sr-only"></span>
                         </i>
                     </div>
 
                     <div id="accordion-collapse-${itemList.index}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="accordion-${item.regionId}">
-                        <div class="country-selector__item-body">
-                            <ul data-sly-list.country="${item.countryList}" class="country-selector__item-list">
-                                <li class="col-xs-12 col-md-3 country-selector__item-country">
-                                    <div class="country-selector__item-country-name">
-                                      <i class="country-selector__item-country-flag flag-${country.countryId}" aria-hidden="true"></i>
-                                      <span class="country-selector__item-country-label b-eyebrow-small">${country.countryName}</span>
+                        <div class="country-selector-accordion__item-body">
+                            <ul data-sly-list.country="${item.countryList}" class="country-selector-accordion__item-list">
+                                <li class="country-selector-accordion__item-country">
+                                    <div class="country-selector-accordion__item-country-name">
+                                      <i class="country-selector-accordion__item-country-flag flag-${country.countryId}" aria-hidden="true"></i>
+                                      <span class="country-selector-accordion__item-country-label b-eyebrow-small">${country.countryName}</span>
                                     </div>
-                                    <ul data-sly-list.language="${country.languageList}" class="country-selector__item-language-list b-body-copy-small">
-                                        <li class="country-selector__item-language">
+                                    <ul data-sly-list.language="${country.languageList}" class="country-selector-accordion__item-language-list b-body-copy-small">
+                                        <li class="country-selector-accordion__item-language">
                                           <a href="${language.languagePath}" target="{language.target}">${language.languageName}</a>
                                         </li>
                                     </ul>
