--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-drawer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-drawer.html
@@ -1,9 +1,9 @@
 <!--/* Country Selector: Drawer */-->
 <sly data-sly-use.data="${'../data/view-data.js' @testdata=properties.testdata}">
-  <div class="country-selector--drawer">
+  <div class="country-selector-drawer">
 
     <!--/* Header *-->
-    <div class="col-sm-12 country-selector--drawer__header">
+    <div class="col-sm-12 country-selector-drawer__header">
       <div class="container">
         <div class="row">
           <h2>${data.header}</h2>
@@ -14,38 +14,38 @@
     <!--/* List of Regions & Countries/ Languages *-->
     <div class="container">
       <div class="row">
-        <div class="u-visible-desktop col-md-3 country-selector__regions">
+        <div class="u-visible-desktop col-md-3 country-selector-drawer__regions">
           List of regions goes here
         </div>
 
-        <div data-sly-list="${data.regionList}" class="col-sm-12 col-md-9 panel-group country-selector__list" role="tablist" aria-multiselectable="true">
-                <div class="panel country-selector__item">
-                    <div class="panel-heading country-selector__item-header" role="tab" id="drawer-${item.regionId}">
+        <div data-sly-list="${data.regionList}" class="col-sm-12 col-md-9 panel-group country-selector-drawer__list" role="tablist" aria-multiselectable="true">
+                <div class="panel country-selector-drawer__item">
+                    <div class="panel-heading country-selector-drawer__item-header" role="tab" id="drawer-${item.regionId}">
                         <a href="#drawer-collapse-${itemList.index}"
-                        class="country-selector__item-link u-absolute-fill"
+                        class="country-selector-drawer__item-link u-absolute-fill"
                         role="button"
                         aria-expanded="false"
                         aria-controls="drawer-collapse-${itemList.index}"
                         data-toggle="collapse"
-                        data-parent="country-selector__item">
+                        data-parent="country-selector-drawer__item">
                             <span class="sr-only">Select your location</span>
                         </a>
-                        <h3 class="country-selector__item-title b-heading-h3">${item.regionName}</h3>
-                        <i class="country-selector__item-icon icon" aria-hidden="true">
+                        <h3 class="country-selector-drawer__item-title b-heading-h3">${item.regionName}</h3>
+                        <i class="country-selector-drawer__item-icon icon" aria-hidden="true">
                           <span class="sr-only"></span>
                         </i>
                     </div>
 
                     <div id="drawer-collapse-${itemList.index}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="drawer-${item.regionId}">
-                        <div class="country-selector__item-body">
-                            <ul data-sly-list.country="${item.countryList}" class="country-selector__item-list">
-                                <li class="col-xs-12 col-md-3 country-selector__item-country">
-                                    <div class="country-selector__item-country-name">
-                                      <i class="country-selector__item-country-flag flag-${country.countryId}" aria-hidden="true"></i>
-                                      <span class="country-selector__item-country-label b-eyebrow-small">${country.countryName}</span>
+                        <div class="country-selector-drawer__item-body">
+                            <ul data-sly-list.country="${item.countryList}" class="country-selector-drawer__item-list">
+                                <li class="col-xs-12 col-md-3 country-selector-drawer__item-country">
+                                    <div class="country-selector-drawer__item-country-name">
+                                      <i class="country-selector-drawer__item-country-flag flag-${country.countryId}" aria-hidden="true"></i>
+                                      <span class="country-selector-drawer__item-country-label b-eyebrow-small">${country.countryName}</span>
                                     </div>
-                                    <ul data-sly-list.language="${country.languageList}" class="country-selector__item-language-list b-body-copy-small">
-                                        <li class="country-selector__item-language">
+                                    <ul data-sly-list.language="${country.languageList}" class="country-selector-drawer__item-language-list b-body-copy-small">
+                                        <li class="country-selector-drawer__item-language">
                                           <a href="${language.languagePath}" target="{language.target}">${language.languageName}</a>
                                         </li>
                                     </ul>
