--- a/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
@@ -31,17 +31,30 @@
     // Desktop Breakpoint: >992 px
     //-----------------------------------
     @include media-desktop-and-up {
+
+      &__header {
+        margin-bottom: $spacing__sm;
+      }
+
+      &__regions-list {
+        list-style: none;
+
+        li {
+          margin-bottom: $spacing__sm;
+        }
+
+        a {
+          color: $color__white;
+        }
+      }
+
       &__item-list {
         display: flex;
         flex-wrap: wrap;
       }
 
       &__item {
-        display: none;
-
-        &.active {
-          display: block;
-        }
+        border: 0;
       }
 
       &__item-header {
