fix styling for article featured

--- a/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
@@ -1,6 +1,12 @@
 .article-list-single-feature {
 
-  padding-bottom: 60px;
+  padding-bottom: 30px;
+  padding-top: 25px;
+
+  @include media-tablet-and-up {
+    padding-bottom: 60px;
+    padding-top: 50px;
+  }
 
   &--border {
     border-top: 4px solid;
