--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
@@ -13,7 +13,7 @@
                         <div class="featured-category--topbottompadding">
                             <div class="b-eyebrow-large category__title--bottompadding">${data.single_feature_card.title}</div>
                             <div class="featured-category__title">${data.single_feature_card.text}</div>
-                            <div class="category-item-date b-body-copy-small"><em>${data.single_feature_card.date_text}</em></div>
+                            <div class="category-item-date category-item-date--gray2 b-body-copy-small"><em>${data.single_feature_card.date_text}</em></div>
                         </div>                    
                     </a>
                 </div>
@@ -31,7 +31,7 @@
                         <div class="category__item--border category__item-innerpadding related-category--tablet-right category__item">
                             <div class="b-eyebrow-small category__title--bottompadding">${slider.title}</div>
                             <div class="b-heading-h5">${slider.text}</div>
-                            <p class="category-item-date b-body-copy-small "><em>${slider.date_text}</em></p>
+                            <p class="category-item-date category-item-date--gray2 b-body-copy-small"><em>${slider.date_text}</em></p>
                         </div>
                     </a>
                 </div>
@@ -49,7 +49,7 @@
                                 <div class="category__item--border category__item-innerpadding carousel__item">
                                     <div class="b-eyebrow-small category__title--bottompadding">${slider.title}</div>
                                     <h5 class="b-heading-h5">${slider.text}</h5>
-                                    <p class="category-item-date category-item-date"><em>${slider.date_text}</em></p>
+                                    <p class="b-body-copy-small category-item-date category-item-date--gray2"><em>${slider.date_text}</em></p>
                                 </div>
                             </div>
                         </a>
