--- a/eaton.frontend/src/components/list/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-default.scss
@@ -66,11 +66,11 @@
 
 
   .category__item-innerpadding {
-    padding: 30px;
+    padding: 30px 30px 15px 30px
   }
 
   .category__title--bottompadding {
-    padding-bottom: 15px;
+    padding-bottom: 10px;
   }
 
   .header-text__topmargin {
@@ -82,12 +82,27 @@
   }
 
   .category-item-date {
-    padding-top: 15px;
+
+    &--gray2 {
+      color: $color__primary-gray2;
+      padding-top: 15px;
+    }
+
+    &--gray3 {
+      color: $color__primary-gray3;
+      padding-top: 10px;
+    }
+
+    &--padding {
+      @include media-desktop-and-up {
+        padding-bottom: 30px;
+      }
+    }
   }
 
   @include media-mobile-only {
     .category__item-innerpadding {
-      padding: 25px;
+      padding: 30px 50px 15px 50px
     }
 
     .carousel__item {
