--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-article-list-single-feature.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-article-list-single-feature.html
@@ -7,8 +7,8 @@
                 </div>
                 <div class="category__item--border category__item-innerpadding related-category--tablet-right">
                     <p class="b-eyebrow-large category__title--bottompadding">${data.single_feature_card.title}</p>
-                    <p class="b-h4-link">${data.single_feature_card.text}</p>
-                    <p class="category-item-date"><em>${data.single_feature_card.date_text}</em></p>
+                    <p class="b-heading-h4">${data.single_feature_card.text}</p>
+                    <p class="category-item-date category-item-date--gray3"><em>${data.single_feature_card.date_text}</em></p>
                 </div>
             </a>
         </div>
@@ -17,8 +17,8 @@
                 <span class="article-list-single-feature--border"></span>
                 <div class="article-list-single-feature__article--copy">
                     <p class="b-eyebrow-small category__title--bottompadding">${card.title}</p>
-                    <p class="b-h4-link">${card.text}</p>
-                    <p class="category-item-date"><em>${card.date_text}</em></p>
+                    <p class="b-heading-h4">${card.text}</p>
+                    <p class="category-item-date category-item-date--gray3 category-item-date--padding"><em>${card.date_text}</em></p>
                 </div>
             </a>
         </div>
