--- a/eaton.frontend/src/components/ttil/css/views/_view-l2-hero.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-l2-hero.scss
@@ -13,8 +13,13 @@
   }
 
   &__text {
-    font-size: 2.0rem;
-    line-height: 3.2rem;
+    font-size: 2.8rem;
+    line-height: 4.4rem;
+
+    @include media-tablet-and-up {
+      font-size: 2.0rem;
+      line-height: 3.2rem;
+    }
   }
 
   @include media-desktop-and-up {
