[Eaton-30] Country Selector Drawer: On Desktop - Make the first panel active on init + markup updates

--- a/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
@@ -36,7 +36,7 @@
         margin-bottom: $spacing__sm;
       }
 
-      &__regions-list {
+      &__region-list {
         list-style: none;
 
         li {
