--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-drawer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-drawer.html
@@ -14,10 +14,10 @@
     <!--/* List of Regions & Countries/ Languages *-->
     <div class="container">
       <div class="row">
-        <ul class="u-visible-desktop col-md-3 country-selector-drawer__regions-list" data-sly-list="${data.regionList}">
+        <ul class="u-visible-desktop col-md-3 country-selector-drawer__region-list" data-sly-list="${data.regionList}">
           <li>
             <a href="#drawer-collapse-${itemList.index}"
-            class="country-selector-drawer__item-link"
+            class="country-selector-drawer__region-link ${itemList.index == 0 ? 'active' : ''}"
             role="button"
             aria-expanded="false"
             aria-controls="drawer-collapse-${itemList.index}"
