[m26] - text only components css bug fix

--- a/eaton.frontend/src/components/list/css/list.scss
+++ b/eaton.frontend/src/components/list/css/list.scss
@@ -7,4 +7,5 @@
 @import 'views/view-article-list-single-feature';
 @import 'views/view-links';
 @import 'views/view-related-products';
-
+@import 'views/view-text-only-2-column.scss';
+@import 'views/view-text-only-3-column.scss';
