[Eaton-30] Country Selector Drawer: On Desktop - JS - Create Initial scripts to handle clicks & show & hide panels

--- a/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
@@ -32,6 +32,11 @@
     //-----------------------------------
     @include media-desktop-and-up {
 
+      // .collapsing {
+      //   transition: none;
+      //   display: none;
+      // }
+
       &__header {
         margin-bottom: $spacing__sm;
       }
