--- a/eaton.frontend/src/components/full-page-drawer/css/full-page-drawer.scss
+++ b/eaton.frontend/src/components/full-page-drawer/css/full-page-drawer.scss
@@ -23,8 +23,10 @@
   //-----------------------------------
   @include media-mobile-and-tablet {
     position: fixed;
-    top: 100%;
+    top: 0;
     width: 100%;
+    height: 100%;
+    overflow: auto;
   }
 
   //-----------------------------------
