[Eaton-30] Country Selector Drawer: Mobile - JS - Interaction + Styles (In progress)

--- a/eaton.frontend/src/components/header/css/_header-interactions.scss
+++ b/eaton.frontend/src/components/header/css/_header-interactions.scss
@@ -83,6 +83,23 @@
       }
     }
   }
+
+  .drawer-open {
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+
+    .full-page-drawer {
+      transform: translate(0, 0);
+      visibility: visible;
+    }
+  }
+
+  .drawer-is-animating {
+    .full-page-drawer {
+      transition: transform 0.5s ease-in-out, visibility 0.3s ease-in-out;
+    }
+  }
 }
 
 //-----------------------------------
