--- a/eaton.frontend/src/components/full-page-drawer/css/full-page-drawer.scss
+++ b/eaton.frontend/src/components/full-page-drawer/css/full-page-drawer.scss
@@ -27,6 +27,9 @@
     width: 100%;
     height: 100%;
     overflow: auto;
+    visibility: hidden;
+    transform: translateY(100%);
+    z-index: 220;
   }
 
   //-----------------------------------
