--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -72,7 +72,10 @@
   .search-open { overflow: hidden; position: fixed; width: 100%; }
   .search-open .header-primary-nav__open-search { -webkit-transition: background 0.3s ease-in-out; transition: background 0.3s ease-in-out; background: #333F48; }
   .search-open .header-primary-nav__open-search .icon-search { display: none; }
-  .search-open .header-primary-nav__open-search .icon-close { display: block; top: -3px; font-size: 18px; } }
+  .search-open .header-primary-nav__open-search .icon-close { display: block; top: -3px; font-size: 18px; }
+  .drawer-open { overflow: hidden; position: fixed; width: 100%; }
+  .drawer-open .full-page-drawer { -webkit-transform: translate(0, 0); transform: translate(0, 0); visibility: visible; }
+  .drawer-is-animating .full-page-drawer { -webkit-transition: visibility 0.3s ease-in-out, -webkit-transform 0.5s ease-in-out; transition: visibility 0.3s ease-in-out, -webkit-transform 0.5s ease-in-out; transition: transform 0.5s ease-in-out, visibility 0.3s ease-in-out; transition: transform 0.5s ease-in-out, visibility 0.3s ease-in-out, -webkit-transform 0.5s ease-in-out; } }
 
 @media screen and (min-width: 992px) { .level-2-open .mega-menu { visibility: visible; opacity: 1; }
   .drawer-open .full-page-drawer { visibility: visible; max-height: 2000px; }
