fix image rendition for related products

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-related-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-related-products.html
@@ -7,8 +7,10 @@
                     ${item.title}
                 </span>
                 </a>
-                <div class="col-xs-12 related-products-component__card rendition">
-                    <img class="carousel-component-slide__image" data-src="${item.image}" data-desktop-rendition="${item.image}" data-mobile-rendition="${item.mobile_image}" data-tablet-rendition="${item.tablet_image}" alt="${item.image_alt}"/>
+                <div class="col-xs-12 related-products-component__card">
+                    <sly data-sly-use.tpl="../../../shared/templates/rendition-image.html">
+                        <sly data-sly-call="${ tpl.module @ data=item.image }"></sly>
+                    </sly>
                 </div>
                 <div class="col-xs-12 related-products-component__info">
                     <p class="b-eyebrow-small related-products-component__title">${item.title}</p>
