[Eaton-30] Country Selector Drawer: Handle closing drawer across breakpoints

--- a/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
@@ -9,6 +9,16 @@
 
     &__header {
       background: $color__primary-gray1;
+
+      .row {
+        display: flex;
+        align-items: center;
+      }
+    }
+
+    &__title {
+      flex-grow: 1;
+      padding-right: 20px;
     }
 
     &__item {
