--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-drawer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-drawer.html
@@ -6,7 +6,11 @@
     <div class="col-sm-12 country-selector-drawer__header">
       <div class="container">
         <div class="row">
-          <h2>${data.header}</h2>
+          <h2 class="country-selector-drawer__title">${data.header}</h2>
+          <button class="button--reset country-selector-drawer__close-menu">
+            <span class="sr-only">Close Drawer</span>
+            <i class="country-selector-drawer__icon icon icon-close" aria-hidden="true"></i>
+          </button>
         </div>
       </div>
     </div>
