--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -51,6 +51,10 @@
 
 .country-selector-drawer__header { background: #333F48; }
 
+.country-selector-drawer__header .row { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+
+.country-selector-drawer__title { -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; padding-right: 20px; }
+
 .country-selector-drawer__item { border-radius: 0; -webkit-box-shadow: none; box-shadow: none; }
 
 .country-selector-drawer__item-header { position: relative; }
