[Eaton-30] Country Selector Drawer: Handle Breakpoint Change Logic

--- a/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
@@ -60,6 +60,11 @@
 
         a {
           color: $color__white;
+          padding: 10px 0;
+          &.active {
+            color: $color__primary-blue;
+            background: $color__secondary-gray5;
+          }
         }
       }
 
