--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
@@ -1,5 +1,11 @@
 <template data-sly-template.module="${ @ data }">
-  <div class="module-media-gallery">
+
+  <!--/*
+    NOTE: data-i18n is a JSON object that contains a list i18n strings used in this Component
+    - These strings are used by Javascript Templates
+  */-->
+  <div class="module-media-gallery"
+    data-i18n='{ "closeOverlay": "${ "Close Image" @ i18n }" }'>
     <div class="container">
       <div class="row">
 
