--- a/eaton.frontend/src/components/ttil/css/views/_view-topic-link-white.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-topic-link-white.scss
@@ -49,7 +49,8 @@
     background: $color__primary-blue;
 
     .eaton-topic-link-white {
-      &__header, &__description {
+      &__header,
+      &__description {
         color: $color__white;
       }
     }
